Ensure search index is built for GitHub Pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,9 @@
 site_name: LIS/ICT 690 - AI Literacy for Information Organizations
 site_url: https://heng-zheng.github.io/ai-literacy-course/
+
+plugins:
+  - search
+
 nav:
   - Home: index.md
   - Weeks:
@@ -14,12 +18,3 @@ nav:
   - Policies:
       - AI Ethics: policies/ai-ethics.md
       - Copyright & TDM: policies/copyright-tdm.md
-theme:
-  name: material
-  features:
-    - navigation.tabs
-    - navigation.sections
-    - navigation.top
-    - toc.follow
-    - search.highlight
-    - search.suggest
