Normalize concept nav labels with acronym whitelist

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,12 +21,12 @@ nav:
       - Week 12: weeks/week-12.md
       - Week 13: weeks/week-13.md
   - Concepts:
-      - ai definition: concepts/ai-definition.md
-      - ai ethics: concepts/ai-ethics.md
+      - AI Definition: concepts/ai-definition.md
+      - AI Ethics: concepts/ai-ethics.md
       - AI Paradigms: concepts/ai-paradigms.md
-      - ai timeline: concepts/ai-timeline.md
-      - copyright tdm: concepts/copyright-tdm.md
-      - symbolic ai: concepts/symbolic-ai.md
+      - AI Timeline: concepts/ai-timeline.md
+      - Copyright TDM: concepts/copyright-tdm.md
+      - Symbolic AI: concepts/symbolic-ai.md
 
 
 
