--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,3 +43,10 @@ theme:
 
 extra_css:
   - stylesheets/extra.css
+
+plugins:
+  - search
+  - git-revision-date-localized:
+      type: date
+      fallback_to_build_date: true
+      enable_creation_date: false
