--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: pip install mkdocs-material
+      - run: pip install -r requirements.txt
       - run: mkdocs build
       - uses: actions/upload-pages-artifact@v3
         with:
